[package]
name = "redruffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { git = "https://github.com/EmperorBale/rustasc", rev = "dd026960718a6a549476cac1127c228d1a0576da" }
parser = { git = "https://github.com/EmperorBale/rustasc", rev = "dd026960718a6a549476cac1127c228d1a0576da"}
ruffle_core = { git = "https://github.com/EmperorBale/ruffle/", rev="e5233991e41bc0e50daba85959c4579cdbfdf5e1"}