[package]
name = "redruffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codegen = { git = "https://github.com/EmperorBale/rustasc", rev = "4fc91065f89497d5419db33b4c140e1d33c1c0c8" }
parser = { git = "https://github.com/EmperorBale/rustasc", rev = "4fc91065f89497d5419db33b4c140e1d33c1c0c8"}
ruffle_core = { git = "https://github.com/EmperorBale/ruffle/", rev="132573cdc39a21672744ca925028b6df49643138"}
enumset = "1.0.12"